--- a/index.html
+++ b/index.html
@@ -41,70 +41,76 @@
   <main>
 
 
-      <div class="heading">
-    <h1 class="heading__name">Global digital agency</h1>
-     <p class="heading__descrip">By the same illusion which lifts the horizon of the sea to the level of<br> the spectator on a hillside, the sable cloud beneath.
-     </p>
-     <button class="heading__button">Learn more</button>
-       <article class="photo">
-      <img src="./images/Photo.png" alt="men and women"  >
-     <p class="photo__title">Intro</p>
-     <p class="photo__text">By the same illusion which<br> lifts the horizon.</p>
-     <button class="photo__button"></button>
-  <ul class="photo__networks networks">
-    <li class="networks__social"><a href="#">Facebook</a> </li>
-    <li class="networks__social"><a href="#"> Twitter</a> </li>
-    <li class="networks__social"><a href="#">Instagram </a></li>
-  </ul>
-</article>
-</div>
+    <div class="heading">
+      <h1 class="heading__name">Global digital agency</h1>
+      <p class="heading__descrip">By the same illusion which lifts the horizon of the sea to the level of<br> the
+        spectator on a hillside, the sable cloud beneath.
+      </p>
+      <button class="heading__button">Learn more</button>
+      <article class="photo">
+        <img src="./images/Photo.png" alt="men and women">
+        <p class="photo__title">Intro</p>
+        <p class="photo__text">By the same illusion which<br> lifts the horizon.</p>
+        <button class="photo__button"></button>
+        <ul class="photo__networks networks">
+          <li class="networks__social"><a href="#">Facebook</a> </li>
+          <li class="networks__social"><a href="#"> Twitter</a> </li>
+          <li class="networks__social"><a href="#">Instagram </a></li>
+        </ul>
+      </article>
+    </div>
 
 
-   <section class="section">
+    <section class="section">
       <div class="inform">
-            <p class="inform__heading main-heading">Welcome</p>
-            <div class="inform__text">
-      <p>By the same illusion which lifts the horizon of the sea to the level<br>
-         of the spectator on a hillside, the sable cloud beneath was dished<br>
-         out, and the car seemed to float in the middle of an immense dark<br>
-         sphere, whose upper half was strewn with silver.</p>
+        <p class="inform__heading main-heading">Welcome</p>
+        <div class="inform__text">
+          <p>By the same illusion which lifts the horizon of the sea to the level<br>
+            of the spectator on a hillside, the sable cloud beneath was dished<br>
+            out, and the car seemed to float in the middle of an immense dark<br>
+            sphere, whose upper half was strewn with silver.</p>
         </div>
-          </div>
+      </div>
     </section>
 
-      <section class="product-card">
+    <section class="product-card">
       <h2 class="title">What we do </h2>
       <div class="cards">
         <action class="cards__item">
-            <div class="picture">
-                <img src="./images/pic1.png" alt="" class="picture__photo">
-                <h3 class="picture__title">By the same illusion which<br> lifts the horizon.</h3>
-                <p class="picture__description">By the same illusion which lifts the <br> horizon of the sea to the level of the <br>spectator on a hillside.</p>
-              </div>
+          <div class="picture">
+            <img src="./images/pic1.png" alt="" class="picture__photo">
+            <h3 class="picture__title">By the same illusion which<br> lifts the horizon.</h3>
+            <p class="picture__description">By the same illusion which lifts the <br> horizon of the sea to the level of
+              the <br>spectator on a hillside.</p>
+          </div>
         </action>
         <action class="cards__item">
-            <div class="picture">
-                <img src="./images/pic2.png" alt="" class="picture__photo">
-                <h3 class="picture__title">By the same illusion which<br>lifts the horizon.</h3>
-                <p class="picture__description">By the same illusion which lifts the<br> horizon of the sea to the  level of the <br>spectator on a hillside.
-                </p>
-              </div>
+          <div class="picture">
+            <img src="./images/pic2.png" alt="" class="picture__photo">
+            <h3 class="picture__title">By the same illusion which<br>lifts the horizon.</h3>
+            <p class="picture__description">By the same illusion which lifts the<br> horizon of the sea to the level of
+              the <br>spectator on a hillside.
+            </p>
+          </div>
         </action>
         <action class="cards__item">
-            <div class="picture">
-                <img src="./images/pic3.png" alt="" class="picture__photo">
-                <h3 class="picture__title">By the same illusion which<br> lifts the horizon.</h3>
-                <p class="picture__description">By the same illusion which lifts the <br> horizon of the sea to the  level of the <br>spectator on a hillside.</p>
-              </div>
-            </action>
+          <div class="picture">
+            <img src="./images/pic3.png" alt="" class="picture__photo">
+            <h3 class="picture__title">By the same illusion which<br> lifts the horizon.</h3>
+            <p class="picture__description">By the same illusion which lifts the <br> horizon of the sea to the level of
+              the <br>spectator on a hillside.</p>
+          </div>
+        </action>
       </div>
     </section>
 
     <section class="process">
 
-        <p class=" main-heading">Process</p>
-        <h3 class="process__heading">By the same illusion which lifts the horizon.</h3>
-        <p class="process__heading">By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle of an immense dark sphere, whose upper half was strewn with silver.</p>
+      <p class=" main-heading">Process</p>
+      <h3 class="process__heading">By the same illusion which lifts the horizon.</h3>
+      <p class="process__heading">By the same illusion which lifts the horizon of the sea to the level of the spectator
+        on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle of an immense
+        dark sphere, whose upper half was strewn with silver.</p>
 
     </section>
 
