--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <p class="photo__text">By the same illusion which<br> lifts the horizon.</p>
         <button class="photo__button"></button>
         <ul class="photo__networks networks">
-          <li class="networks__social"><a href="#">Facebook</a> </li>
-          <li class="networks__social"><a href="#"> Twitter</a> </li>
-          <li class="networks__social"><a href="#">Instagram </a></li>
+          <li class="networks__soc"><a href="#">Facebook</a> </li>
+          <li class="networks__soc"><a href="#"> Twitter</a> </li>
+          <li class="networks__soc"><a href="#">Instagram </a></li>
         </ul>
       </article>
     </div>
