--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <action class="cards__item">
           <div class="picture">
             <img src="./images/pic1.png" alt="" class="picture__photo">
-            <h3 class="picture__title">By the same illusion which<br> lifts the horizon.</h3>
+            <h3 class="picture__title">By the same illusion which lifts the horizon.</h3>
             <p class="picture__description">By the same illusion which lifts the <br> horizon of the sea to the level of
               the <br>spectator on a hillside.</p>
           </div>
@@ -146,10 +146,22 @@
           </p>
         </div>
     </section>
-    </section>
+  </section>
 
+  <section class="features">
+    <div class="features__inform">
+    <p class="features__title">Features</p>
+    <h3 class="features__heading">By the same illusion<br> which lifts the horizon.</h3>
+    <p class="features__text">By the same illusion which lifts the<br>horizon of the sea to the level of the<br> spectator on a hillside,
+       the sable <br>cloud beneath was dished out.</p>
+       <p class="features__text_two">By the same illusion which lifts the<br>horizon of the sea to the level of the<br> spectator on a hillside,
+        the sable <br>cloud beneath was dished out.</p>
+        <p class="features__text_three">By the same illusion which lifts the<br>horizon of the sea to the level of the<br> spectator on a hillside,
+          the sable <br>cloud beneath was dished out.</p>
 
-
+    </div>
+    <img src="./images/photo.rotate.png" class="slider_rotate">
+  </section>
   </main>
 </body>
 
