--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           the sable <br>cloud beneath was dished out.</p>
 
       </div>
-      <img src="./images/photo.rotate.png" class="slider_rotate">
+      <img src="./images/photo.rotate.png" alt="guys" class="slider_rotate">
     </section>
   </main>
 </body>
