--- a/index.html
+++ b/index.html
@@ -228,19 +228,19 @@
     <section class="message ">
       <form action="#" class="message__form">
         <p class="main-heading message__heading">Send us a message</p>
-      <label с><input type="email" placeholder="Your email" class="message__field" required></label>
-      <label><input type="text" placeholder="Your name" class="message__field" required></label>
-      <label><input type="text" placeholder="Your message" class="message__field" required></label>
-       <button class="message__button">Send</button>
+        <label><input type="email" placeholder="Your email" class="message__field" required></label>
+        <label><input type="text" placeholder="Your name" class="message__field" required></label>
+        <label><input type="text" placeholder="Your message" class="message__field" required></label>
+        <button class="message__button">Send</button>
       </form>
       <div class="contact">
-          <p class="main-heading contact__heading ">Contact us</p>
-          <p class="contact__title">By the same illusion<br> which lifts the horizon.</p>
-          <p class="contact__text">Call us</p>
-          <a href="tel(+654 321 987)" class="contact__phone">654 321 987</a>
-          <p class="contact__text">Visit us</p>
-          <address class="contact__address">2905 West Drive,<br> Buffalo Grove</address>
-          <div class="logo">
+        <p class="main-heading contact__heading ">Contact us</p>
+        <p class="contact__title">By the same illusion<br> which lifts the horizon.</p>
+        <p class="contact__text">Call us</p>
+        <a href="tel(+654 321 987)" class="contact__phone">654 321 987</a>
+        <p class="contact__text">Visit us</p>
+        <address class="contact__address">2905 West Drive,<br> Buffalo Grove</address>
+        <div class="logo">
           <img src="./images/twitter.png" alt="twitter" class="logo__img">
           <img src="./images/instagram.png" alt="instagram" class="logo__img">
           <img src="./images/facebook.png" alt="facebook" class="logo__img">
