--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <script type="text/javascript" src="scripts/main.js"></script>
   <header class="header">
     <div class="header__menu">
-    <div  class="header__logo">Dia</div>
     <nav class="nav">
       <ul class="nav__list">
+          <li  class="header__logo nav__item">Dia</li>
         <li class="nav__item">
           <a href="#" class="nav__link">Home</a>
         </li>
@@ -64,7 +64,7 @@
     </article>
 
 
-    <section class="section">
+    <section class="section section_web">
       <div class="inform">
         <p class="inform__heading main-heading">Welcome</p>
           <p class="inform__text">By the same illusion which lifts the horizon of the sea to the level<br>
@@ -105,8 +105,8 @@
       </div>
     </section>
 
-    <section class="process">
-      <div class="process__inform">
+    <section class="process section_web">
+      <div class="process__inform ">
         <p class=" main-heading process__title">Process</p>
         <h3 class="process__heading">By the same illusion which lifts the horizon.</h3>
         <p class="process__text">By the same illusion which lifts the horizon of the sea to the level of the spectator
@@ -157,7 +157,7 @@
     </div>
     </section>
 
-    <section class="features">
+    <section class="features section_web">
       <div class="features__inform">
         <p class="features__title">Features</p>
         <p class="features__heading">By the same illusion<br> which lifts the horizon.</p>
@@ -173,7 +173,7 @@
       </div>
       <div class="features__photo"><img src="images/photo.rotate.png" class="features__img" alt="guys" div>
         </section>
-    <section class="testimonials">
+    <section class="testimonials section_web">
       <div class="testimonials__cotainer">
       <article class="test"><p class="main-heading testimonials__title">Testimonials</p>
       <p class="testimonials__heading">By the same illusion which lifts the horizon.</p>
@@ -231,7 +231,7 @@
         the sea to the level of the spectator on a hillside, the sable cloud beneath.</p>
       <button class="vision__button">Apply</button>
     </section>
-    <section class="message ">
+    <section class="message section_web ">
       <form action="#" class="message__form">
         <p class="main-heading message__heading">Send us a message</p>
         <label><input type="email" placeholder="Your email" class="message__field" required></label>
@@ -239,7 +239,7 @@
         <label><input type="text" placeholder="Your message" class="message__field" required></label>
         <button class="message__button">Send</button>
       </form>
-      <div class="contact">
+      <div class="contact section_web">
         <p class="main-heading contact__heading ">Contact us</p>
         <p class="contact__title">By the same illusion<br> which lifts the horizon.</p>
         <p class="contact__text">Call us</p>
@@ -255,7 +255,7 @@
     </section>
 
     <footer class="footer">
-      <p class="footer__design">Design by @mariuszdaniel</p>
+      <p class="footer__design section_web">Design by @mariuszdaniel</p>
       <nav class="footer__nav navigation">
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
