--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           the<br> spectator on a hillside,
           the sable <br>cloud beneath was dished out.</p>
       </div>
-      <div class="features__photo"><img src="images/photo.rotate.png" class="features__img" alt="guys" div>
+      <div class="features__photo"><img src="images/photo.rotate.png" class="features__img" alt="guys" ></div>
         </section>
     <section class="testimonials section_web">
       <div class="testimonials__cotainer">
