--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
   <script type="text/javascript" src="scripts/main.js"></script>
   <header class="header">
-    <div class="header__menu">
       <nav class="nav">
+    <div class="header__menu">
+        <input id="toggle" class="menu__toggle" type="checkbox">
+        <label for="toggle" class="menu__btn">
+           <span class="menu__span"></span>
+         </label>
         <ul class="nav__list">
           <li class="nav__item nav__item_logo">Dia</li>
           <li class="nav__item">
