--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header class="header">
       <nav class="nav">
     <div class="header__menu">
+      <!--made burger menu-->
         <input id="toggle" class="menu__toggle" type="checkbox">
         <label for="toggle" class="menu__btn">
            <span class="menu__span"></span>
@@ -81,7 +82,7 @@
   <section class="product-card">
     <h2 class="title">What we do </h2>
     <div class="cards">
-      <action class="cards__item">
+      <action class="cards__item cards__item_first">
         <div class="picture">
           <img
             src="https://raw.githubusercontent.com/mate-academy/layout_dia/master/src/images/what-we-do/what-we-do-1.jpg"
@@ -264,8 +265,10 @@
       </div>
     </div>
   </section>
-
+ <hr>
+ <section class="bg_footer">
   <footer class="footer">
+    <!----made footer line -->
     <p class="footer__design section_web">Design by @mariuszdaniel</p>
     <nav class="footer__nav navigation">
       <ul class="navigation__list">
@@ -277,6 +280,7 @@
       </ul>
     </nav>
   </footer>
+</section>
   </main>
 </body>
 
