--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
   <script type="text/javascript" src="scripts/main.js"></script>
   <header class="header">
-      <nav class="nav">
-    <div class="header__menu">
-      <!--made burger menu-->
+    <nav class="nav">
+      <div class="header__menu">
+        <!--made burger menu-->
         <input id="toggle" class="menu__toggle" type="checkbox">
         <label for="toggle" class="menu__btn">
-           <span class="menu__span"></span>
-         </label>
+          <span class="menu__span"></span>
+        </label>
         <ul class="nav__list">
           <li class="nav__item nav__item_logo">Dia</li>
           <li class="nav__item">
@@ -40,7 +40,7 @@
             <a href="#" class="nav__link nav__link_active">Hire us</a>
           </li>
         </ul>
-      </nav>
+    </nav>
     </div>
 
     <section class="header__content center">
@@ -175,10 +175,12 @@
       <p class="features__text">By the same illusion which lifts the<br>horizon of the sea to the level of the<br>
         spectator on a hillside,
         the sable <br>cloud beneath was dished out.</p>
-      <p class="features__text features__text_two">By the same illusion which lifts the<br>horizon of the sea to the level of the<br>
+      <p class="features__text features__text_two">By the same illusion which lifts the<br>horizon of the sea to the
+        level of the<br>
         spectator on a hillside,
         the sable <br>cloud beneath was dished out.</p>
-      <p class="features__text features__text_three">By the same illusion which lifts the<br>horizon of the sea to the level of
+      <p class="features__text features__text_three">By the same illusion which lifts the<br>horizon of the sea to the
+        level of
         the<br> spectator on a hillside,
         the sable <br>cloud beneath was dished out.</p>
     </div>
@@ -265,22 +267,22 @@
       </div>
     </div>
   </section>
- <hr>
- <section class="bg_footer">
-  <footer class="footer">
-    <!----made footer line -->
-    <p class="footer__design section_web">Design by @mariuszdaniel</p>
-    <nav class="footer__nav navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">About us</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Services</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Work</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link">Contact Us</a></li>
-      </ul>
-    </nav>
-  </footer>
-</section>
+  <hr>
+  <section class="bg_footer">
+    <footer class="footer">
+      <!----made footer line -->
+      <p class="footer__design section_web">Design by @mariuszdaniel</p>
+      <nav class="footer__nav navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">About us</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Services</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Work</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </footer>
+  </section>
   </main>
 </body>
 
